--- a/auth/package.json
+++ b/auth/package.json
@@ -22,6 +22,7 @@
     "@types/express": "^4.17.15",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/mongoose": "^5.11.97",
+    "@vaibhavtickets/common": "^1.0.3",
     "cookie-session": "^2.0.0",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
