--- a/orders/package.json
+++ b/orders/package.json
@@ -22,13 +22,14 @@
     "@types/express": "^4.17.15",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/mongoose": "^5.11.97",
-    "@vaibhavtickets/common": "^1.0.3",
+    "@vaibhavtickets/common": "^1.0.8",
     "cookie-session": "^2.0.0",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "express-validator": "^6.14.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.3",
+    "mongoose-update-if-current": "^1.4.0",
     "node-nats-streaming": "^0.3.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.4"
