initiated payments service

--- a/infra/k8s/ingress-srv.yaml
+++ b/infra/k8s/ingress-srv.yaml
@@ -28,7 +28,14 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: tickets-srv
+                name: orders-srv
+                port:
+                  number: 3000
+          - path: /api/payments/?(.*)
+            pathType: Prefix
+            backend:
+              service:
+                name: orders-srv
                 port:
                   number: 3000
           - path: /?(.*)
