--- a/expiration/package.json
+++ b/expiration/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tickets",
+  "name": "expiration",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -18,28 +18,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/cookie-session": "^2.0.44",
-    "@types/express": "^4.17.16",
-    "@types/jsonwebtoken": "^9.0.1",
-    "@types/mongoose": "^5.11.97",
-    "@vaibhavtickets/common": "^1.0.9",
-    "cookie-session": "^2.0.0",
-    "express": "^4.18.2",
-    "express-async-errors": "^3.1.1",
-    "express-validator": "^6.14.3",
-    "jsonwebtoken": "^9.0.0",
-    "mongoose": "^6.9.0",
-    "mongoose-update-if-current": "^1.4.0",
+    "@types/bull": "^4.10.0",
+    "@vaibhavtickets/common": "^1.0.10",
+    "bull": "^4.10.2",
     "node-nats-streaming": "^0.3.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.5"
   },
   "devDependencies": {
     "@types/jest": "^29.2.5",
-    "@types/supertest": "^2.0.12",
     "jest": "^29.3.1",
-    "mongodb-memory-server": "^8.11.2",
-    "supertest": "^6.3.3",
     "ts-jest": "^29.0.5"
   }
 }
