--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -40,3 +40,19 @@ build:
         manual:
           - src: './src/**/*.ts'
             dest: .
+    - image: vaibhav908/expiration
+      context: expiration
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: './src/**/*.ts'
+            dest: .
+    - image: vaibhav908/payments
+      context: payments
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: './src/**/*.ts'
+            dest: .
