--- a/infra/k8s/ingress-srv.yaml
+++ b/infra/k8s/ingress-srv.yaml
@@ -35,7 +35,7 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: orders-srv
+                name: payments-srv
                 port:
                   number: 3000
           - path: /?(.*)
