--- a/.github/workflows/deploy-manifests.yml
+++ b/.github/workflows/deploy-manifests.yml
@@ -5,6 +5,7 @@ on:
       - master
     paths:
       - 'infra/**'
+      
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -14,4 +15,4 @@ jobs:
         with:
           token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
       - run: doctl kubernetes cluster kubeconfig save ticketing
-      - run: kubectl apply -f infra/k8s
+      - run: kubectl apply -f infra/k8s | infra/k8s-prod
