--- a/auth/package.json
+++ b/auth/package.json
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "@types/jest": "^29.2.5",
+    "@types/node": "^18.13.0",
     "@types/supertest": "^2.0.12",
     "jest": "^29.3.1",
     "mongodb-memory-server": "^8.11.2",
