--- a/expiration/package.json
+++ b/expiration/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@types/jest": "^29.2.5",
+    "@types/node": "^18.13.0",
     "jest": "^29.3.1",
     "ts-jest": "^29.0.5"
   }
