--- a/infra/k8s-prod/ingress-srv.yaml
+++ b/infra/k8s-prod/ingress-srv.yaml
@@ -7,7 +7,7 @@ metadata:
     nginx.ingress.kubernetes.io/use-regex: 'true'
 spec:
   rules:
-    - host: ticket.devaibhav.live
+    - host: ticket.devaibhav.me
       http:
         paths:
           - path: /api/users/?(.*)
@@ -52,7 +52,7 @@ kind: Service
 metadata:
   annotations:
     service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: 'true'
-    service.beta.kubernetes.io/do-loadbalancer-hostname: 'ticket.devaibhav.live'
+    service.beta.kubernetes.io/do-loadbalancer-hostname: 'ticket.devaibhav.me'
   labels:
     helm.sh/chart: ingress-nginx-2.0.3
     app.kubernetes.io/name: ingress-nginx
@@ -67,14 +67,15 @@ spec:
   externalTrafficPolicy: Local
   ports:
     - name: http
+      protocol: TCP
       port: 80
-      protocol: TCP
-      targetPort: http
+      targetPort: 80
     - name: https
-      port: 443
       protocol: TCP
-      targetPort: https
+      port: 443
+      targetPort: 443
   selector:
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/instance: ingress-nginx
     app.kubernetes.io/component: controller
+
