--- a/infra/k8s-prod/ingress-srv.yaml
+++ b/infra/k8s-prod/ingress-srv.yaml
@@ -51,7 +51,7 @@ apiVersion: v1
 kind: Service
 metadata:
   annotations:
-    service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: 'true'
+    service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: "true"    
     service.beta.kubernetes.io/do-loadbalancer-hostname: 'ticket.devaibhav.me'
   labels:
     helm.sh/chart: ingress-nginx-2.0.3
