--- a/infra/k8s-dev/ingress-srv.yaml
+++ b/infra/k8s-dev/ingress-srv.yaml
@@ -56,7 +56,7 @@ metadata:
     service.beta.kubernetes.io/do-loadbalancer-hostname: 'ticketing.dev'
   labels:
     helm.sh/chart: ingress-nginx-2.0.3
-    app.kubernetes.io/name: ingress-nginx
+    app.kubernetes.io/name: ingreiss-nginx
     app.kubernetes.io/instance: ingress-nginx
     app.kubernetes.io/version: 0.32.0
     app.kubernetes.io/managed-by: Helm
