--- a/infra/k8s-prod/ingress-srv.yaml
+++ b/infra/k8s-prod/ingress-srv.yaml
@@ -3,11 +3,16 @@ kind: Ingress
 metadata:
   name: ingress-service
   annotations:
+    cert-manager.io/issuer: letsencrypt-nginx
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/use-regex: 'true'
 spec:
+  tls:
+    - hosts:
+      - ticket.devaibhav.me
+      secretName: letsencrypt-nginx
   rules:
-    - host: ticket.devaibhav.me
+    - host: api.devaibhav.me
       http:
         paths:
           - path: /api/users/?(.*)
@@ -38,13 +43,6 @@ spec:
                 name: payments-srv
                 port:
                   number: 3000
-          - path: /?(.*)
-            pathType: Prefix
-            backend:
-              service:
-                name: client-srv
-                port:
-                  number: 3000
 ---
 
 apiVersion: v1
@@ -52,7 +50,7 @@ kind: Service
 metadata:
   annotations:
     service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: "true"
-    service.beta.kubernetes.io/do-loadbalancer-hostname: 'ticket.devaibhav.me'
+    service.beta.kubernetes.io/do-loadbalancer-hostname: 'api.devaibhav.me'
   labels:
     helm.sh/chart: ingress-nginx-2.0.3
     app.kubernetes.io/name: ingress-nginxlive
