--- a/.github/workflows/deploy-manifests.yml
+++ b/.github/workflows/deploy-manifests.yml
@@ -14,5 +14,5 @@ jobs:
       - uses: digitalocean/action-doctl@v2
         with:
           token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
-      - run: doctl kubernetes cluster kubeconfig save do-blr1-ticket-production
+      - run: doctl kubernetes cluster kubeconfig save ticket-production
       - run: kubectl apply -f infra/k8s && kubectl apply -f infra/k8s-prod
