changed ingress domain host

--- a/infra/k8s-prod/ingress-srv.yaml
+++ b/infra/k8s-prod/ingress-srv.yaml
@@ -7,7 +7,7 @@ metadata:
     nginx.ingress.kubernetes.io/use-regex: 'true'
 spec:
   rules:
-    - host: ticket.devaibhav.me
+    - host: getix.devaibhav.me
       http:
         paths:
           - path: /api/users/?(.*)
@@ -52,7 +52,7 @@ kind: Service
 metadata:
   annotations:
     service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: "true"
-    service.beta.kubernetes.io/do-loadbalancer-hostname: 'ticket.devaibhav.me'
+    service.beta.kubernetes.io/do-loadbalancer-hostname: 'getix.devaibhav.me'
   labels:
     helm.sh/chart: ingress-nginx-2.0.3
     app.kubernetes.io/name: ingress-nginxlive
